Added some extra functions for in/out degrees, updated docs and added example

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,4 +1,4 @@
-TESTS := test.out readme_ex.out traversal.out
+TESTS := test.out readme_ex.out traversal.out make.out
 
 CC := g++ -std=c++20
 LFLAGS := -pedantic -Wall -g -O3
