--- a/test/Makefile
+++ b/test/Makefile
@@ -1,4 +1,4 @@
-TESTS := test.out readme_ex.out traversal.out make.out \
+TESTS := test.out readme_ex.out make.out \
 	stress_test.out cpg.out
 FORMAT_TESTS := $(TESTS:%.out=%.format.out)
 
