Reformatted testing, updated changelog

--- a/test/Makefile
+++ b/test/Makefile
@@ -9,21 +9,22 @@ LIBS := -lsqlite3
 
 .PHONY:	all
 all:	$(TESTS) $(FORMAT_TESTS) cli.out cli.format.out
-	for test in $(TESTS) ; do 	\
-		./$$test ;				\
-	done
 	./cli.out cli_input.txt
-
-	for test in $(FORMAT_TESTS) ; do 	\
-		./$$test ;				\
-	done
 	./cli.format.out cli_input.txt
+
+cli.out:	cli.o
+	$(CC) $(LFLAGS) -o $@ $^ $(LIBS)
+
+cli.format.out:	cli.format.o
+	$(CC) $(LFLAGS) -o $@ $^ $(LIBS)
 
 %.out:	%.o
 	$(CC) $(LFLAGS) -o $@ $^ $(LIBS)
+	@./$@
 
 %.format.out:	%.format.o
 	$(CC) $(LFLAGS) -o $@ $^ $(LIBS)
+	@./$@
 
 %.o:	%.cpp
 	$(CC) $(CFLAGS) -c -o $@ $^
