Attempted fix on ci-cd

--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt update
-        sudo apt install g++ graphviz
+        sudo apt install -y g++ graphviz libsqlite3-dev
 
     - name: Run tests
       run: |
