--- a/cli/Makefile
+++ b/cli/Makefile
@@ -3,6 +3,10 @@ CPP = g++ -pedantic -Wall -O3 -g -std=c++20
 cli.out:	cli.o
 	$(CPP) -o $@ $^ -lsqlite3
 
+.PHONY:	install
+install:	cli.out
+	cp cli.out /usr/bin/gqlite3
+
 cli.o:	cli.cpp ../src/gql.hpp
 	$(CPP) -c -o $@ $<
 
