--- a/cli/Makefile
+++ b/cli/Makefile
@@ -1,11 +1,15 @@
 CPP = g++ -pedantic -Wall -O3 -g -std=c++20
 
-cli.out:	cli.o
+cli.out:	cli.o ../src/gql.hpp
 	$(CPP) -o $@ $^ -lsqlite3
 
 .PHONY:	install
 install:	cli.out
 	cp cli.out /usr/bin/gqlite3
+
+.PHONY:	clean
+clean:
+	rm -rf *.out *.o
 
 cli.o:	cli.cpp ../src/gql.hpp
 	$(CPP) -c -o $@ $<
