--- a/test/Makefile
+++ b/test/Makefile
@@ -1,5 +1,6 @@
 TESTS := test.out readme_ex.out make.out \
-	stress_test.out cpg.out non_ascii_test.out
+	stress_test.out cpg.out non_ascii_test.out \
+	letter_entropy.out
 FORMAT_TESTS := $(TESTS:%.out=%.format.out)
 
 CC := g++ -std=c++20
